--- a/application/views/event/detail_event.html
+++ b/application/views/event/detail_event.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Detail</title>
+
+    <link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -104,7 +112,7 @@
         }
 
         .buy-now button {
-            background-color: #ffc107;
+            background-color: yellow;
             color: #000;
             padding: 15px 30px;
             font-size: 18px;
@@ -115,25 +123,72 @@
         }
 
         .buy-now button:hover {
-            background-color: #e0a800;
+            background-color: greenyellow;
         }
     </style>
 </head>
 <body>
-    <header>
-        <div class="logo">GETIX</div>
-        <nav>
-            <a href="#">Beranda</a>
-            <a href="#">Event</a>
-            <a href="#">Contact</a>
-            <a href="#" class="btn">Sign in</a>
-            <a href="#" class="btn">Register</a>
-        </nav>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2 pb-2">
+        <div class="container-fluid">
+            <img
+                src="gambar/gettix.png"
+                alt="gambarget"
+                width="180px"
+                height="70px"
+            />
+            <a class="navbar-brand" href="#"></a>
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul
+                    class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto justify-content-between"
+                >
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            id="navbarDropdown"
+                            role="button"
+                            data-bs-toggle="dropdown"
+                            aria-expanded="false"
+                        >
+                            Dropdown
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider" /></li>
+                            <li>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <button class="btn btn-success" type="submit">Login</button>
+                </form>
+            </div>
+        </div>
+    </nav>
 
     <div class="container">
         <h1>Detail Event</h1>
-        <img src="placeholder-banner.jpg" alt="Event Banner" class="event-banner">
+        <img src="gambar/runevent.png" alt="Event Banner" class="event-banner">
 
         <div class="event-description">
             <p>Pure Life Night Run Fest is an event held by Nestle Pure Life on 18th January 2025 at Kodam XII Tanjungpura, Pontianak. Combining Night Run, Music Concert & Culinary Festival in one place.</p>
@@ -171,14 +226,22 @@
         </div>
     </div>
 
-    <footer>
-        <p>&copy; 2024 GetTix. All Rights Reserved</p>
-        <div class="social-links">
-            <a href="#">LinkedIn</a>
-            <a href="#">Instagram</a>
-            <a href="#">Telegram</a>
-            <a href="#">Twitter</a>
+    <footer style="text-align: center; padding: 10px;">
+        <div>
+            <img src="gambar/gettix.png" alt="Gettix Logo" style="width: 200px;
+            height: 70px;">
         </div>
     </footer>
+
+    <script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+			integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+			integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+			crossorigin="anonymous"
+		></script>
 </body>
 </html>
