--- a/application/views/event/event.html
+++ b/application/views/event/event.html
@@ -10,6 +10,11 @@
 			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
 			crossorigin="anonymous"
 		/>
+
+		<link
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        rel="stylesheet"
+    />
 	</head>
 	<body style="background-color: #343a40">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2 pb-2">
@@ -141,24 +146,38 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
-    
-    <div class="container-fluid">
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
+
+		<div class="container-fluid mb-5" style="display: flex; justify-content: center; align-items: center;">
+			<form class="d-flex">
+				<input
+					class="form-control me-2"
+					type="search"
+					placeholder="Search"
+					aria-label="Search"
+					style="width: 1590px; height: 40px; font-size: 16px;"
+				/>
+				<button class="btn btn-outline-success" type="submit">Search</button>
+			</form>
+		</div>
 
 		<div
 			id="carouselExampleControls1"
-			class="carousel slide mb-5"
-			data-bs-ride="carousel">
-
+			class="carousel slide"
+			data-bs-ride="carousel"
+		>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<div class="row row-cols-1 row-cols-md-3 g-4">
 						<div class="col">
-							<div class="card h-100" style="width: 500px; height: 400px; margin-left: auto; border-radius: 5px;">
+							<div
+								class="card h-100"
+								style="
+									width: 500px;
+									height: 400px;
+									margin-left: auto;
+									border-radius: 5px;
+								"
+							>
 								<img src="gambar/guton.jpg" class="card-img-top" alt="event1" />
 								<div class="card-body">
 									<h5 class="card-title">Nama Event</h5>
@@ -175,7 +194,15 @@
 						</div>
 
 						<div class="col">
-							<div class="card h-100" style="width: 500px; height: 400px; margin: auto; border-radius: 5px;">
+							<div
+								class="card h-100"
+								style="
+									width: 500px;
+									height: 400px;
+									margin: auto;
+									border-radius: 5px;
+								"
+							>
 								<img src="gambar/fbs.jpg" class="card-img-top" alt="event4" />
 								<div class="card-body">
 									<h5 class="card-title">Nama Event</h5>
@@ -192,7 +219,15 @@
 						</div>
 
 						<div class="col">
-							<div class="card h-100" style="width: 500px; height: 400px; margin-right: auto; border-radius: 5px;">
+							<div
+								class="card h-100"
+								style="
+									width: 500px;
+									height: 400px;
+									margin-right: auto;
+									border-radius: 5px;
+								"
+							>
 								<img
 									src="gambar/romansa.jpg"
 									class="card-img-top"
@@ -215,7 +250,15 @@
 				<div class="carousel-item">
 					<div class="row row-cols-1 row-cols-md-3 g-4">
 						<div class="col">
-							<div class="card h-100" style="width: 500px; height: 400px; margin-left: auto; border-radius: 5px;">
+							<div
+								class="card h-100"
+								style="
+									width: 500px;
+									height: 400px;
+									margin-left: auto;
+									border-radius: 5px;
+								"
+							>
 								<img
 									src="gambar/djarum.png"
 									class="card-img-top"
@@ -236,7 +279,15 @@
 						</div>
 
 						<div class="col">
-							<div class="card h-100" style="width: 500px; height: 400px; margin: auto; border-radius: 5px;">
+							<div
+								class="card h-100"
+								style="
+									width: 500px;
+									height: 400px;
+									margin: auto;
+									border-radius: 5px;
+								"
+							>
 								<img
 									src="gambar/runevent.png"
 									class="card-img-top"
@@ -257,7 +308,15 @@
 						</div>
 
 						<div class="col">
-							<div class="card h-100" style="width: 500px; height: 400px; margin-right: auto; border-radius: 5px;">
+							<div
+								class="card h-100"
+								style="
+									width: 500px;
+									height: 400px;
+									margin-right: auto;
+									border-radius: 5px;
+								"
+							>
 								<img
 									src="gambar/florest.jpg"
 									class="card-img-top"
@@ -299,6 +358,40 @@
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
+
+		<div class="container text-center my-5">
+			<h2 class="fw-bold" style="color: aliceblue;">Cara Beli Tiket</h2>
+			<p style="color: aliceblue;">Sekarang beli tiket online gak perlu ribet</p>
+			<div class="row text-center mt-4">
+				<div class="col-md-3">
+					<i class="fas fa-user-plus fa-3x text-primary"></i>
+					<h5 class="mt-3" style="color: aliceblue;">Registrasi Akun</h5>
+					<p style="color: aliceblue;">Daftarkan akun anda untuk pembelian tiket</p>
+				</div>
+				<div class="col-md-3">
+					<i class="fas fa-calendar-alt fa-3x text-primary"></i>
+					<h5 class="mt-3" style="color: aliceblue;">Pilih Event</h5>
+					<p style="color: aliceblue;">Pilih event dan tiket yang akan kamu beli</p>
+				</div>
+				<div class="col-md-3">
+					<i class="fas fa-credit-card fa-3x text-primary"></i>
+					<h5 class="mt-3" style="color: aliceblue;">Pembayaran</h5>
+					<p style="color: aliceblue;">Pilih tipe pembayaran yang telah kami sediakan</p>
+				</div>
+				<div class="col-md-3">
+					<i class="fas fa-envelope fa-3x text-primary"></i>
+					<h5 class="mt-3" style="color: aliceblue;">Pembelian Selesai</h5>
+					<p style="color: aliceblue;">E-Tiket telah dikirimkan ke email & akun event kamu</p>
+				</div>
+			</div>
+		</div>
+
+		<footer style="background-color: gray; text-align: center; padding: 10px;">
+			<div>
+				<img src="gambar/gettix.png" alt="Gettix Logo" style="width: 200px;
+				height: 70px;">
+			</div>
+		</footer>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
