--- a/application/views/event/detail_event.html
+++ b/application/views/event/detail_event.html
@@ -191,7 +191,7 @@
         <img src="gambar/runevent.png" alt="Event Banner" class="event-banner">
 
         <div class="event-description">
-            <p>Pure Life Night Run Fest is an event held by Nestle Pure Life on 18th January 2025 at Kodam XII Tanjungpura, Pontianak. Combining Night Run, Music Concert & Culinary Festival in one place.</p>
+            <p>Pureaaaa Life Night Run Fest is an event held by Nestle Pure Life on 18th January 2025 at Kodam XII Tanjungpura, Pontianak. Combining Night Run, Music Concert & Culinary Festival in one place.</p>
             <p>What’s on:
                 <ul>
                     <li>8K Night Run (Jl. Major Alianyang, Jl. Arteri Supadio, Jl. Jendral Ahmad Yani)</li>
